--- a/src/styles/CheckoutCard.module.css
+++ b/src/styles/CheckoutCard.module.css
@@ -1,7 +1,7 @@
 .cardContainer {
   height: fit-content;
-  /* width: fit-content; */
-  width: 300px;
+  width: fit-content;
+  /* width: 300px; */
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
