--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -4,9 +4,13 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: end;
+  justify-content: center;
+  margin: 0.5rem;
+}
+
+.footer p {
   color: var(--frog-dk);
   font-family: var(--font-title);
-  font-size: 0.9rem;
-  margin: 1rem;
+  font-size: 1.25rem;
+  text-align: center;
 }
