--- a/src/styles/ShoppingCart.module.css
+++ b/src/styles/ShoppingCart.module.css
@@ -54,7 +54,10 @@
 }
 
 .summaryContainer {
-  width: 300px;
+
+  height: fit-content;
+  width: 100%;
+    /* width: 300px; */
   background: var(--white);
   color: var(--frog-black);
   padding: 1rem;
