--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -18,7 +18,7 @@
   color: var(--white);
   /* cursor: pointer; */
   /* font-family: var(--font-text); */
-  /* font-size: 1rem; */
+  font-size: 0.9rem;
   /* padding: 0.5rem; */
   text-transform: uppercase;
 }
