--- a/src/styles/CheckoutCard.module.css
+++ b/src/styles/CheckoutCard.module.css
@@ -69,11 +69,13 @@
 }
 
 .rowContainer {
+  width: fit-content;
   display: flex;
   gap: 0.25rem;
 }
 
 .colContainer {
+  width: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
