error in last commit with css.

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -19,7 +19,7 @@
 
 .title {
   color: var(--rose-dk);
-  color: red
+  color: red;
     /* color: var(--frog-black); */
   font-family: var(--font-title);
 
