--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -6,10 +6,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  gap: 0.25rem;
+  /* gap: 0.25rem; */
   background-color: var(--white);
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
+  font-family: var(--font-text);
   padding: 0.25rem;
 }
 
@@ -100,7 +101,7 @@
   gap: 0.5rem;
   background-color: var(--white);
   font-family: var(--font-text);
-  padding: 0.25rem;
+  /* padding: 0.25rem; */
 }
 
 .detailsContainer {
@@ -111,10 +112,12 @@
 }
 
 .priceContainer {
+  height: fit-content;
   /* width: 18.5rem; */
   /* width: fit-content; */
   /* display: flex; */
   flex-direction: column;
+  gap: 0.25rem;
   /* flex-wrap: wrap;
   align-items: center;
   justify-content: center; */
@@ -129,6 +132,7 @@
 .buttonContainer {
   width: 100%;
     flex-direction: row;
+
       font-size: 1.125rem;
 }
 
