--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -18,15 +18,15 @@
   color: var(--white);
   /* cursor: pointer; */
   /* font-family: var(--font-text); */
-  font-size: 0.9rem;
+  /* font-size: 0.9rem; */
   padding: 0.5rem;
   text-transform: uppercase;
 }
 
 .cart:hover {
-  background-color: var(--gold);
+  background-color: var(--rose-dk);
   border: 0.125rem solid var(--frog-black);
-  color: var(--frog-black);
+  color: var(--gold-lt);
 }
 
 /* NOTE - Don't use css variable colors (i.e., var) on the following three buttons, leave as is for future ease of cut & paste into other projects */
@@ -63,7 +63,8 @@
 
 .removeCartItem {
   display: block;
-  width: 100%;
+  /* width: 100%; */
+  width: auto;
   background-color: var(--frog-black);
   border: 4px solid var(--gold-lt);
   border-radius: 0.5rem;
@@ -71,7 +72,7 @@
   /* cursor: pointer; */
   /* font-size: 1rem; */
   font-weight: 800;
-  /* padding: 0.5rem; */
+  padding: 0.5rem;
   text-transform: uppercase;
 }
 
