--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -1,6 +1,6 @@
 .cardContainer {
   height: fit-content;
-  width: 20rem;
+  width: 22rem;
   /* width: fit-content; */
   display: flex;
   flex-wrap: wrap;
@@ -12,7 +12,8 @@
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
   font-family: var(--font-text);
-  padding: 0.25rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
 }
 
 .cardContainer h1 {
