--- a/src/styles/CheckoutCard.module.css
+++ b/src/styles/CheckoutCard.module.css
@@ -1,6 +1,7 @@
 .cardContainer {
   height: fit-content;
-  width: fit-content;
+  /* width: fit-content; */
+  width: auto;
   /* width: 300px; */
   display: flex;
   flex-direction: column;
