--- a/src/styles/ShoppingCart.module.css
+++ b/src/styles/ShoppingCart.module.css
@@ -56,7 +56,8 @@
 .summaryContainer {
 
   height: fit-content;
-  width: 100%;
+  width: auto;
+  min-width: 306px;
     /* width: 300px; */
   background: var(--white);
   color: var(--frog-black);
