--- a/src/styles/ShoppingCart.module.css
+++ b/src/styles/ShoppingCart.module.css
@@ -65,7 +65,7 @@
   border-radius: 0.5rem;
   /* max-width: 400px; */
   /* margin: 2rem auto; */
-  /* margin: 1rem; */
+  margin: 1rem;
 }
 
 .summaryLine,
