--- a/src/styles/CheckoutCard.module.css
+++ b/src/styles/CheckoutCard.module.css
@@ -5,14 +5,16 @@
   /* width: 300px; */
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 0.25rem;
   background-color: var(--gold-lt);
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--gold);
   color: var(--frog-black);
   font-family: var(--font-text);
-  margin: 0.5rem;
-  padding: 0.5rem;
+  margin: 0.25rem;
+  padding: 0.25rem;
   text-transform: capitalize;
 }
 
@@ -72,8 +74,12 @@
 
 .rowContainer {
   /* width: 100%; */
-  width: auto;
+  /* width: auto; */
+  width: 20rem;
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   gap: 0.25rem;
 }
 
@@ -155,7 +161,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 0.25rem;
   color: var(--rose-dk);
   font-size: 1.5rem;
 }
