--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -10,7 +10,8 @@
 
 .footer p {
   color: var(--frog-dk);
-  font-family: var(--font-title);
-  font-size: 1rem;
+  font-family: var(--font-text);
+  font-size: 0.9rem;
+  font-weight: 800;
   text-align: center;
 }
