--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -19,10 +19,8 @@
 
 .title {
   color: var(--rose-dk);
-  color: violet;
-    /* color: var(--frog-black); */
+  /* color: var(--frog-black); */
   font-family: var(--font-title);
-
 }
 
 .title p {
@@ -60,9 +58,9 @@
 }
 
 .imgContainer p {
+  width: 20rem;
   color: var(--rose-dk);
   font-family: var(--font-title);
   font-size: 1rem;
-    text-align: center;
-  /* text-transform: uppercase; */
+  text-align: center;
 }
