styling: DDG looks good, but FF browser now off a bit, test latest fixes

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,12 @@
 
   --font-size-title-regular: ;
   --font-size-title-grand: ;
+
+  --width-card: 20rem;
+  --width-main: auto;
+  --margin-padding-main: 0.25rem;
+
+
 }
 
 *,
