--- a/src/styles/ShoppingCart.module.css
+++ b/src/styles/ShoppingCart.module.css
@@ -56,8 +56,8 @@
 .summaryContainer {
 
   height: fit-content;
-  width: 324px;
-  min-width: 306px;
+  width: var(--width-card);
+  /* min-width: 306px; */
     /* width: 300px; */
   background: var(--white);
   color: var(--frog-black);
@@ -65,7 +65,7 @@
   border-radius: 0.5rem;
   /* max-width: 400px; */
   /* margin: 2rem auto; */
-  margin: 1rem;
+  /* margin: 1rem; */
 }
 
 .summaryLine,
