styling: a host of random picky changes to css, test in mobile browsers

--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,9 @@
   --font-size-title-regular: ;
   --font-size-title-grand: ;
 
-  --width-card: 20rem;
+  --width-card: 18rem;
   --width-main: auto;
-  --margin-padding-main: 0.25rem;
+  --margin-padding-gap-main: 0.25rem;
 
 
 }
