--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -25,7 +25,7 @@
   text-transform: uppercase;
 }
 
-.cart:hover {
+.cart:hover  {
   background-color: var(--rose-dk);
   border: 0.125rem solid var(--frog-black);
   color: var(--gold-lt);
@@ -54,8 +54,9 @@
 .incrementDecrementButton {
   height: 2rem;
   width: 2rem;
-  background-color: var(--rose-dk);
-  border: 0.125rem solid var(--rose-dk);
+  background-color: var(--frog-black);
+  /* border: 0.125rem solid var(--rose-dk); */
+  border: none;
   border-radius: 4px;
   color: var(--gold);
   /* cursor: pointer; */
@@ -65,9 +66,10 @@
 
 .removeCartItem {
   /* display: block; */
+  width: var(--width-card);
   /* width: 100%; */
   /* width: auto; */
-  width: 18.25rem;
+   /* width: calc(var(--width-card) - var(--margin-padding-gap-main)); */
   background-color: var(--frog-black);
   border: 4px solid var(--gold-lt);
   border-radius: 0.5rem;
@@ -79,12 +81,19 @@
   text-transform: uppercase;
 }
 
+.removeCartItem:hover, .incrementDecrementButton:hover  {
+  background-color: var(--rose-dk);
+  /* border: 0.125rem solid var(--frog-black); */
+  color: var(--frog-black);
+}
+
 /* .cart:hover, */
 .paypalButton:hover,
 .cardButton:hover,
 .appleButton:hover,
-.incrementDecrementButton:hover,
-.removeCartItem:hover {
+.incrementDecrementButton:hover
+/* .removeCartItem:hover  */
+{
   transform: scale(1.05);
 }
 
