styling: tweaks to card padding and shop card button height

--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -9,7 +9,7 @@
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
   font-family: var(--font-text);
-  padding: 0.25rem; 
+  padding: 0.5rem 0.25rem; 
 }
 
 .cardContainer h1 {
