--- a/src/styles/Dropdown.module.css
+++ b/src/styles/Dropdown.module.css
@@ -1,6 +1,6 @@
 .dropdown {
   position: relative;
-    height: fit-content;
+  height: fit-content;
   display: inline-block;
   color: var(--frog-black);
   font-family: var(--font-text);
@@ -9,7 +9,7 @@
 }
 
 .dropdownButton {
-  height: fit-content;
+  height: 2rem;
   /* width: fit-content; */
   display: flex;
   align-items: center;
