styling: test of 90vw across three mobile browsers

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
   --font-size-title-regular: ;
   --font-size-title-grand: ;
 
-  --width-card: 18rem;
+  --width-card: 90vw;
   --width-main: auto;
   --margin-padding-gap-main: 0.25rem;
 
