--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -4,36 +4,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* border: transparent; */
   cursor: pointer;
-   font-family: var(--font-text);
+  font-family: var(--font-text);
   font-size: 1rem;
-  /* padding: 0.25rem; */
 }
 
 .cart {
-  height: 2rem;
-  /* width: 7.75rem; */
+  height: 2.5rem;
   width: fit-content;
   background-color: var(--frog-dk);
   border: 0.125rem solid var(--frog-black);
   border-radius: 4px;
   color: var(--white);
-  /* cursor: pointer; */
-  /* font-family: var(--font-text); */
-  /* font-size: 0.9rem; */
   padding: 0.25rem;
   text-transform: uppercase;
 }
 
-.cart:hover  {
+.cart:hover {
   background-color: var(--rose-dk);
   border: 0.125rem solid var(--frog-black);
   color: var(--gold-lt);
 }
 
 /* NOTE - Don't use css variable colors (i.e., var) on the following three buttons, leave as is for future ease of cut & paste into other projects */
-
 .paypalButton {
   /* PayPal Yellow? */
   background-color: #ffc439;
@@ -56,45 +49,33 @@
   height: 2rem;
   width: 2rem;
   background-color: var(--frog-black);
-  /* border: 0.125rem solid var(--rose-dk); */
   border: none;
   border-radius: 4px;
   color: var(--gold);
-  /* cursor: pointer; */
-  /* font-family: var(--font-text); */
   font-size: 1.5rem;
 }
 
 .removeCartItem {
-  /* display: block; */
   width: var(--width-card);
-  /* width: 100%; */
-  /* width: auto; */
-   /* width: calc(var(--width-card) - var(--margin-padding-gap-main)); */
   background-color: var(--frog-black);
   border: 4px solid var(--gold-lt);
   border-radius: 0.5rem;
   color: var(--gold-lt);
-  /* cursor: pointer; */
-  /* font-size: 1rem; */
   font-weight: 800;
   padding: 0.5rem;
   text-transform: uppercase;
 }
 
-.removeCartItem:hover, .incrementDecrementButton:hover  {
+.removeCartItem:hover,
+.incrementDecrementButton:hover {
   background-color: var(--rose-dk);
-  /* border: 0.125rem solid var(--frog-black); */
   color: var(--frog-black);
 }
 
-/* .cart:hover, */
 .paypalButton:hover,
 .cardButton:hover,
 .appleButton:hover,
-.incrementDecrementButton:hover
-/* .removeCartItem:hover  */
-{
+.incrementDecrementButton:hover {
   transform: scale(1.05);
 }
 
