--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,10 @@
   --font-plushies: "Matemasie", sans-serif;
   --font-spanko: "Bangers", system-ui;
 
-  --font-size-title-regular: ;
-  --font-size-title-grand: ;
-
+  --navbar-image-size: 3rem;
+  --navbar-font-size: 1rem;
+  --navbar-cart-num-circle-size: 1.5rem;
+  --navbar-search-width: 35ch;
   --width-card: 90vw;
   --width-main: auto;
   --margin-padding-gap-main: 0.25rem;
@@ -87,6 +88,10 @@ li {
 
 @media (min-width: 600px) {
   :root {
+      --navbar-image-size: 3.5rem;
+  --navbar-font-size: 1.25rem;
+  --navbar-search-width: 40ch;
+    --navbar-cart-num-circle-size: 1.85rem;
     --image-circles-main: 25rem;  
   }
 }
